# fortune-es-api

./: Dockerfile  README.md  env-example  pyproject.toml
fortune_es_api/: api.py  elasticsearch_client.py  main.py
