[tool.poetry]
name = "fortune-es-api"
version = "0.1.0"
description = ""
authors = ["Łukasz Bacik <mail@luka.sh>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.1"
uvicorn = "^0.23.2"
python-dotenv = "^1.0.0"
elasticsearch = "~7.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

